--- a/index-colchicine.html
+++ b/index-colchicine.html
@@ -40,7 +40,7 @@
         <h1>Колхіцин / Colchicine / Колхицин</h1>
         <p class="prod">Виробник: <b>Італія</b></p>
         <div class="foto-colchicine">
-            <img class="foto" src="img/cochicine3.jpg" alt="купити колхіцин,colchicine,колхицин в Україні">
+            <img class="foto" src="img/colh.jpg" alt="купити колхіцин,colchicine,колхицин в Україні">
         </div>
         <div class="price-colchicine">
             <h3 class="block">Контактна інформація:</h3>
