--- a/index-medics.html
+++ b/index-medics.html
@@ -57,7 +57,7 @@
             </div>
             <a href="index-zarontin.html">
                 <div class="zarontin-price">
-                    <img class="zaron" src="./img/zarontin.jpeg" alt="купити заронтін, zarontin,заронтин в Україні">
+                    <img class="zaron" src="./img/zarontin12.jpg" alt="купити заронтін, zarontin,заронтин в Україні">
                     <p class="detal-inf">Ціна: 1200 грн/уп.</p>
                 </div>
             </a>
@@ -78,7 +78,7 @@
             </div>
             <a href="index-colchicine.html">
                 <div class="colchicine-price">
-                    <img src="./img/colc.png" alt="купити колхіцин,colchicine,колхицин в Україні">
+                    <img src="./img/colh.jpg" alt="купити колхіцин,colchicine,колхицин в Україні">
                     <p class="detal-inf">Ціна: 425 грн/уп.</p>
                 </div>
             </a>
@@ -95,7 +95,7 @@
             </div>
             <a href="index-iruxol.html">
                 <div class="iruxol-price">
-                    <img class="irux" src="./img/iruxol4.jpg" alt="купити ируксол,iruxol,іруксол в Україні">
+                    <img class="irux" src="./img/irx.jpg" alt="купити ируксол,iruxol,іруксол в Україні">
                     <p class="detal-inf">Ціна: 630 грн/уп.</p>
                 </div>
             </a>
