--- a/index-zarontin.html
+++ b/index-zarontin.html
@@ -40,7 +40,7 @@
         <h1>Заронтін - (Zarontin)</h1>
         <p class="prod">Виробник: <b>Італія</b></p>
         <div class="foto-zarontin">
-            <img class="foto" src="img/zar.jpg" alt="купити заронтін, zarontin,заронтин в Україні">
+            <img class="foto" src="img/zarontin12.jpg" alt="купити заронтін, zarontin,заронтин в Україні">
         </div>
         <div class="price-zarontin">
             <h3 class="block">Контактна інформація:</h3>
