--- a/index-cytotec.html
+++ b/index-cytotec.html
@@ -57,6 +57,8 @@
                 Ви можете замовити Сайтотек,Цитотек у містах: Одеса, Херсон, Чернігів, Сєверодонецьк, Бердянськ, Бровари, Дніпро, Вінниця, Київ, Слов'янськ, Полтава, Краматорськ, Біла Церква, Кам'янське, Маріуполь, Чернівці, Олександрія, Кам'янець-Подільський, Львів, Запоріжжя, Кропивницький, Житомир, Івано-Франківськ, Суми, Черкаси, Костянтинівка, Мелітополь, Кривий Ріг, Рівне, Луцьк, Нікополь, Павлоград, Ужгород, Кременчук, Лисичанськ, Хмельницький, Тернопіль, Харків, Миколаїв, а також в інших населених пунктах України.
             </p>
             <p>Також дізнайтесь більше про Сайтотек за посиланням: <b><a class="cytotec-com" href="cytotec.com.ua">cytotec.com.ua</a></b></p>
+            <h2>Діюча речовина:</h2>
+            <p>Діючою речовиною сайтотек: Мізопростол</p>
             <h2>Форма випуску:</h2>
             <p>Сайтотек випускається в таблетованій формі. Фасовка: 50 табл. / Упаковка.</p>
             <h2>Фармакологічні властивості:</h2>
