--- a/rus/index-cytotec.html
+++ b/rus/index-cytotec.html
@@ -24,6 +24,17 @@
                             <li>
                                 <a href="index-contact.html">Контакты</a>
                             </li>
+                            <li>
+                                <form class="lang">
+                                    <label>
+                                        <select name="lang" id="lang" onchange='switchLang()'>
+                                            <option disabled selected style="display: none;">Язык</option>
+                                            <option value="ukr">Українська</option>
+                                            <option value="rus">Русский</option>
+                                        </select>
+                                    </label>
+                                </form>
+                            </li>
                         </ul>
                     </nav>
                     <div class="phone">
@@ -52,119 +63,120 @@
     </div>
     <div class="main-info wrapper">
         <h2>Купить Сайтотек - Cytotec:</h2>
-            <p>Для того чтобы купить Сайтотек на фармиталь, вам нужно только позвонить нашему менеджеру.</p>
-            <p>Доставка Cytotec осуществляется транспортными компаниями, сроки выполнения заказа оговариваются менеджером Фармитал.
-                Вы можете заказать Сайтотек,Цитотек в городах: Одесса, Херсон, Чернигов, Северодонецк, Бердянск, Бровары, Днепр, Винница, Киев, Славянск, Полтава, Краматорск, Белая Церковь, Каменское, Мариуполь, Черновцы, Александрия, Камь янец-подольский, Львов, Запорожье, Кропивницкий, Житомир, Ивано-Франковск, Сумы, Черкассы, Константиновка, Мелитополь, Кривой Рог, Ровно, Луцк, Никополь, Павлоград, Ужгород, Кременчуг, Лисичанск, Хмельницкий, Тернополь, Харьков, Николаев, а также в других населённых пунктах Украины.
-            </p>
-            <p>Также узнайте больше о Сайтотеке по ссылке: <b><a class="cytotec-com" href="cytotec.com.ua">cytotec.com.ua</a></b></p>
-            <h2>Форма выпуска:</h2>
-            <p>Сайтотек выпускается в таблетированной форме. Фасовка: 50 табл. / Упаковка.</p>
-            <h2>Фармакологические свойства:</h2>
-            <p>Действующее вещество таблеток Сайтотек является синтезированным аналогом производимым организмом простагландина Е1. Данная молекула способствует усилению защитных свойств слизистой желудочно-кишечного тракта за счет стимуляции выработки слизи железистыми клетками желудка, усиления природной секреции бикарбонатных молекул.<br>
-                Это увеличивает устойчивость слизистой желудочно-кишечного тракта, не дает агрессивным компонентам из пищи, алкогольных напитков, терапевтических препаратов наносить вред клеткам, которые формируют слизистую желудочно-кишечного тракта.
-                Сайтотек оказывает следующие эффекты:<br>
-                – вызывает нейтрализацию кислоты за счет усиления синтеза бикарбонатов;<br>
-                - защищает стенки желудка от агрессивных молекул за счет увеличения выработки слизи, улучшения ее качественного состава;<br>
-                - улучшает кровоснабжение слизистой желудочно-кишечного тракта со стимуляцией регенеративных процессов.<br>
-                Молекула мезопростола снижает продукцию пепсиновых молекул. Терапевтическое действие наступает через 30 минут после приема лекарства, действует в течение 180 минут. Мезопростол провоцирует сокращение миометрия, усиливая интенсивность сокращения. 
-            </p>
-            <h2>Показания:</h2>
-            <ul>
-                <li>необходимости применения препаратов НПВС;</li>
-                <li>язвенной болезни любой локализации;</li>
-                <li>язвенное поражение двенадцатиперстной кишки с кровотечением или без него;</li>
-                <li>язвенное поражение желудка с кровотечением или без него.</li>
-            </ul>
-            <h2>Применение:</h2>
-            <p>Таблетка Сайтотек принимается перорально (через рот). Показано употреблять лекарственную форму непосредственно с пищей, после еды и перед отходом ко сну.<br>
-                Для терапии язвенных повреждений желудочно-кишечного тракта, гастритов с эрозиями слизистой суточная доза составляет 0,8 мг с делением ее на 2-4 приема.
-                В целях профилактики развития язвенного поражения желудочно-кишечного тракта назначается 0,4-0,8 мг/сут с делением дозы на 2-4 приема.<br>
-                При необходимости терапии препаратами группы НПВС показано принимать Сайтотек во время всего лечения.<br>
-                В период обострения язвы двенадцатиперстной кишки следует принимать 1 месяц.<br>
-                Через месяц производится эндоскопия. При обнаружении неполного рубцевания курс продолжается еще месяц.
-            </p>
-            <h2>Побочные эффекты:</h2>
-            <p>Применение таблеток Сайтотек может сопровождаться:</p>
-            <ul>
-                <li class="first">запором;</li>
-                <li>диареей;</li>
-                <li>кожной сыпью;</li>
-                <li>болями внизу живота;</li>
-                <li>астенией;</li>
-                <li>тошнотой;</li>
-                <li>головными болями;</li>
-                <li>гиперменорея;</li>
-                <li>кровяными влагалищными выделениями;</li>
-                <li>судорогами;</li>
-                <li>изменением массы тела;</li>
-                <li>метеоризмом;</li>
-            </ul>
-            <p> Не превышайте дозировку, установленную вашим врачом! В случае возникновения побочных эффектов немедленно обратиться к врачу.</p>
-            <h2>Противопоказания:</h2>
-            <p>Сайтотек не назначается при:</p>
-            <ul>
-                <li>патологиях печени выраженного характера;</li>
-                <li>артериальной гипотонии;</li>
-                <li>острой форме почечной недостаточности;</li>
-                <li>нарушениях церебрального кровообращения;</li>
-                <li>патологии кишечника, ассоциированные с воспалением;</li>
-                <li>беременность;</li>
-                <li>планировании беременности;</li>
-                <li>свидетельствах у пациенток предклимактерического периода;</li>
-                <li>свидетельствах у кормящих;</li>
-                <li>гиперчувствительность к мезопростолу;</li>
-                <li>свидетельствам у пациентов до 17 лет.</li>
-            </ul>
-            <p>Осторожность необходима при назначении таблеток Сайтотек при:</p>
-            <ul>
-                <li>органические патологии церебральных сосудов;</li>
-                <li>нарушениях периферического кровообращения острого характера;</li>
-                <li>эпилепсии.</li>
-            </ul>
-            <h2>Передозировка:</h2>
-            <p>Применение препарата в дозах, превышающих терапевтические, может сопровождаться такой симптоматикой:</p>
-            <ul>
-                <li>гипотензией;</li>
-                <li>лихорадкой;</li>
-                <li>приступом такихардии;</li>
-                <li>замедлением скорости реакции;</li>
-                <li>диареей;</li>
-                <li>сонливостью;</li>
-                <li>судорожный синдром.</li>
-                <li>тремором;</li>
-            </ul>
-            <p>При возникновении какой-либо из вышеперечисленных реакций немедленно обратиться к врачу!<br>
-                Строго соблюдать дозировку, определенную врачом.</p>
-            <h2>Условия хранения:</h2>
-            <p>Температура хранения таблеток Сайтотек – до 30 градусов Цельсия. Срок годности препарата – 3 года.</p>
-        </div>
-        <footer>
-            <div class="footer-top">
-                <div class="wrapper-fon">
-                    <div class="row">
-                        <div class="logotipe-bottom"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Интернет Аптека FarmItal"></a></div>
-                        <ul class="basic-inf column top">
-                            <li><a href="/"><b>Главная</b></a></li>
-                            <li><a href="index-medics.html"><b>Ассортимент Аптеки</b></a></li>
-                            <li><a href="index-contact.html"><b>Контакты</b></a></li>
-                        </ul>
-                        <div class="phone-bottom column top">
-                            <p><a href="tel:+380979301788" class="tel-bottom"><b>+38(097) 930-17-88</b></a></p>
-                            <p><a href="tel:+380959371699"><b>+38(095) 937-16-99</b></a></p>
-                            <p><a href="tel:+380631294099"><b>+38(063) 129-40-99</b></a></p>
-                        </div>
-                        <div class="mail column top">
-                            <p><a href="mailto:likital687@gmail.com" class="url"><b>likital687@gmail.com</b></a></p>
-                            <p><a href="viber://chat?number=%2B380979301788" class="viber"><b>FarmItal</b></a></p>
-                        </div>
+        <p>Для того чтобы купить Сайтотек на фармиталь, вам нужно только позвонить нашему менеджеру.</p>
+        <p>Доставка Cytotec осуществляется транспортными компаниями, сроки выполнения заказа оговариваются менеджером Фармитал.
+            Вы можете заказать Сайтотек,Цитотек в городах: Одесса, Херсон, Чернигов, Северодонецк, Бердянск, Бровары, Днепр, Винница, Киев, Славянск, Полтава, Краматорск, Белая Церковь, Каменское, Мариуполь, Черновцы, Александрия, Камь янец-подольский, Львов, Запорожье, Кропивницкий, Житомир, Ивано-Франковск, Сумы, Черкассы, Константиновка, Мелитополь, Кривой Рог, Ровно, Луцк, Никополь, Павлоград, Ужгород, Кременчуг, Лисичанск, Хмельницкий, Тернополь, Харьков, Николаев, а также в других населённых пунктах Украины.
+        </p>
+        <p>Также узнайте больше о Сайтотеке по ссылке: <b><a class="cytotec-com" href="cytotec.com.ua">cytotec.com.ua</a></b></p>
+        <h2>Форма выпуска:</h2>
+        <p>Сайтотек выпускается в таблетированной форме. Фасовка: 50 табл. / Упаковка.</p>
+        <h2>Фармакологические свойства:</h2>
+        <p>Действующее вещество таблеток Сайтотек является синтезированным аналогом производимым организмом простагландина Е1. Данная молекула способствует усилению защитных свойств слизистой желудочно-кишечного тракта за счет стимуляции выработки слизи железистыми клетками желудка, усиления природной секреции бикарбонатных молекул.<br>
+            Это увеличивает устойчивость слизистой желудочно-кишечного тракта, не дает агрессивным компонентам из пищи, алкогольных напитков, терапевтических препаратов наносить вред клеткам, которые формируют слизистую желудочно-кишечного тракта.
+            Сайтотек оказывает следующие эффекты:<br>
+            – вызывает нейтрализацию кислоты за счет усиления синтеза бикарбонатов;<br>
+            - защищает стенки желудка от агрессивных молекул за счет увеличения выработки слизи, улучшения ее качественного состава;<br>
+            - улучшает кровоснабжение слизистой желудочно-кишечного тракта со стимуляцией регенеративных процессов.<br>
+            Молекула мезопростола снижает продукцию пепсиновых молекул. Терапевтическое действие наступает через 30 минут после приема лекарства, действует в течение 180 минут. Мезопростол провоцирует сокращение миометрия, усиливая интенсивность сокращения. 
+        </p>
+        <h2>Показания:</h2>
+        <ul>
+            <li>необходимости применения препаратов НПВС;</li>
+            <li>язвенной болезни любой локализации;</li>
+            <li>язвенное поражение двенадцатиперстной кишки с кровотечением или без него;</li>
+            <li>язвенное поражение желудка с кровотечением или без него.</li>
+        </ul>
+        <h2>Применение:</h2>
+        <p>Таблетка Сайтотек принимается перорально (через рот). Показано употреблять лекарственную форму непосредственно с пищей, после еды и перед отходом ко сну.<br>
+            Для терапии язвенных повреждений желудочно-кишечного тракта, гастритов с эрозиями слизистой суточная доза составляет 0,8 мг с делением ее на 2-4 приема.
+            В целях профилактики развития язвенного поражения желудочно-кишечного тракта назначается 0,4-0,8 мг/сут с делением дозы на 2-4 приема.<br>
+            При необходимости терапии препаратами группы НПВС показано принимать Сайтотек во время всего лечения.<br>
+            В период обострения язвы двенадцатиперстной кишки следует принимать 1 месяц.<br>
+            Через месяц производится эндоскопия. При обнаружении неполного рубцевания курс продолжается еще месяц.
+        </p>
+        <h2>Побочные эффекты:</h2>
+        <p>Применение таблеток Сайтотек может сопровождаться:</p>
+        <ul>
+            <li class="first">запором;</li>
+            <li>диареей;</li>
+            <li>кожной сыпью;</li>
+            <li>болями внизу живота;</li>
+            <li>астенией;</li>
+            <li>тошнотой;</li>
+            <li>головными болями;</li>
+            <li>гиперменорея;</li>
+            <li>кровяными влагалищными выделениями;</li>
+            <li>судорогами;</li>
+            <li>изменением массы тела;</li>
+            <li>метеоризмом;</li>
+        </ul>
+        <p> Не превышайте дозировку, установленную вашим врачом! В случае возникновения побочных эффектов немедленно обратиться к врачу.</p>
+        <h2>Противопоказания:</h2>
+        <p>Сайтотек не назначается при:</p>
+        <ul>
+            <li>патологиях печени выраженного характера;</li>
+            <li>артериальной гипотонии;</li>
+            <li>острой форме почечной недостаточности;</li>
+            <li>нарушениях церебрального кровообращения;</li>
+            <li>патологии кишечника, ассоциированные с воспалением;</li>
+            <li>беременность;</li>
+            <li>планировании беременности;</li>
+            <li>свидетельствах у пациенток предклимактерического периода;</li>
+            <li>свидетельствах у кормящих;</li>
+            <li>гиперчувствительность к мезопростолу;</li>
+            <li>свидетельствам у пациентов до 17 лет.</li>
+        </ul>
+        <p>Осторожность необходима при назначении таблеток Сайтотек при:</p>
+        <ul>
+            <li>органические патологии церебральных сосудов;</li>
+            <li>нарушениях периферического кровообращения острого характера;</li>
+            <li>эпилепсии.</li>
+        </ul>
+        <h2>Передозировка:</h2>
+        <p>Применение препарата в дозах, превышающих терапевтические, может сопровождаться такой симптоматикой:</p>
+        <ul>
+            <li>гипотензией;</li>
+            <li>лихорадкой;</li>
+            <li>приступом такихардии;</li>
+            <li>замедлением скорости реакции;</li>
+            <li>диареей;</li>
+            <li>сонливостью;</li>
+            <li>судорожный синдром.</li>
+            <li>тремором;</li>
+        </ul>
+        <p>При возникновении какой-либо из вышеперечисленных реакций немедленно обратиться к врачу!<br>
+            Строго соблюдать дозировку, определенную врачом.</p>
+        <h2>Условия хранения:</h2>
+        <p>Температура хранения таблеток Сайтотек – до 30 градусов Цельсия. Срок годности препарата – 3 года.</p>
+    </div>
+    <footer>
+        <div class="footer-top">
+            <div class="wrapper-fon">
+                <div class="row">
+                    <div class="logotipe-bottom"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Интернет Аптека FarmItal"></a></div>
+                    <ul class="basic-inf column top">
+                        <li><a href="/"><b>Главная</b></a></li>
+                        <li><a href="index-medics.html"><b>Ассортимент Аптеки</b></a></li>
+                        <li><a href="index-contact.html"><b>Контакты</b></a></li>
+                    </ul>
+                    <div class="phone-bottom column top">
+                        <p><a href="tel:+380979301788" class="tel-bottom"><b>+38(097) 930-17-88</b></a></p>
+                        <p><a href="tel:+380959371699"><b>+38(095) 937-16-99</b></a></p>
+                        <p><a href="tel:+380631294099"><b>+38(063) 129-40-99</b></a></p>
+                    </div>
+                    <div class="mail column top">
+                        <p><a href="mailto:likital687@gmail.com" class="url"><b>likital687@gmail.com</b></a></p>
+                        <p><a href="viber://chat?number=%2B380979301788" class="viber"><b>FarmItal</b></a></p>
                     </div>
                 </div>
             </div>
-            <div class="footer-bottom">
-                <div class="wrapper-cop">
-                    <p class="copyright">&copy; Интернет Аптека FarmItal 2021</p>
-                </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="wrapper-cop">
+                <p class="copyright">&copy; Интернет Аптека FarmItal 2021</p>
             </div>
-        </footer>
+        </div>
+    </footer>
+    <script src="../js/scripts.js"></script>
 </body>
 </html>
