--- a/index-cytotec.html
+++ b/index-cytotec.html
@@ -24,6 +24,17 @@
                             <li>
                                 <a href="index-contact.html">Контакти</a>
                             </li>
+                            <li>
+                                <form class="lang">
+                                    <label>
+                                        <select name="lang" id="lang" onchange='switchLang()'>
+                                            <option disabled selected style="display: none;">Мова</option>
+                                            <option value="ukr">Українська</option>
+                                            <option value="rus">Русский</option>
+                                        </select>
+                                    </label>
+                                </form>
+                            </li>
                         </ul>
                     </nav>
                     <div class="phone">
@@ -168,5 +179,6 @@
             </div>
         </div>
     </footer>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
