--- a/rus/index-zarontin.html
+++ b/rus/index-zarontin.html
@@ -25,6 +25,17 @@
                             <li>
                                 <a href="index-contact.html">Контакты</a>
                             </li>
+                            <li>
+                                <form class="lang">
+                                    <label>
+                                        <select name="lang" id="lang" onchange='switchLang()'>
+                                            <option disabled selected style="display: none;">Язык</option>
+                                            <option value="ukr">Українська</option>
+                                            <option value="rus">Русский</option>
+                                        </select>
+                                    </label>
+                                </form>
+                            </li>
                         </ul>
                     </nav>
                     <div class="phone">
@@ -162,5 +173,6 @@
             </div>
         </div>
     </footer>
+    <script src="../js/scripts.js"></script>
 </body>
 </html>
