--- a/index-cytotec.html
+++ b/index-cytotec.html
@@ -46,7 +46,7 @@
             <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
             <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
             <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
-            <p class="price"><b>Ціна: 730 грн/уп.</b></p>
+            <p class="price"><b>Ціна: 750 грн/уп.</b></p>
             <p class="stock"><b>В наявності</b></p>
         </div>
     </div>
@@ -156,8 +156,8 @@
                         <p><a href="tel:+380631294099"><b>+38(063) 129-40-99</b></a></p>
                     </div>
                     <div class="mail column top">
-                        <p><a href="mailto:likital687@gmail.com" class="url"><b>likital687@gmail.com</b></a></p>
-                        <p><a href="viber://chat?number=%2B380979301788" class="viber"><b>FarmItal</b></a></p>
+                        <p class="url"><a href="mailto:likital687@gmail.com"><b>likital687@gmail.com</b></a></p>
+                        <p class="viber"><a href="viber://chat?number=%2B380979301788"><b>FarmItal</b></a></p>
                     </div>
                 </div>
             </div>
